Fix gap

--- a/assets/css/Theme.scss
+++ b/assets/css/Theme.scss
@@ -446,7 +446,8 @@ main .docs {
         }
 
         .gap {
-            margin: 40px 0;
+            display: block;
+            height: 80px;
         }
 
         // special
